# snake-SDL2

./: CMakeLists.txt  main.c
lib/: food.h  formulas.h  game.h  snake.h
